--- a/firmware/data/index.html
+++ b/firmware/data/index.html
@@ -8,7 +8,7 @@
     <canvas id="canvas"></canvas>
     <div>
     <form action="/" method="POST">
-      <a href="/">HOME</a> | <a href="wifi">WIFI</a> | <a href="/config">CONFIG</a> | <a href="/sensors">SENSORS</a>
+      <a href="/">HOME</a> | <a href="wifi">WIFI</a> | <a href="/config">CONFIG HA</a> | <a href="/sensors">SENSORS</a>
       <br><a href="/firmware">FIRMWARE</a>
       <h1>SMART PLANT <br>MONITOR </h1>
       <br>
