--- a/firmware/data/sensors.html
+++ b/firmware/data/sensors.html
@@ -8,7 +8,7 @@
   <canvas id="canvas"></canvas>
     <div>
     <form action="/sensors" method="POST">
-      <a href="/">HOME</a> | <a href="/wifi">WIFI</a> | <a href="/config">CONFIG</a> | <a href="/sensors">SENSORS</a>
+      <a href="/">HOME</a> | <a href="/wifi">WIFI</a> | <a href="/config">CONFIG HA</a> | <a href="/sensors">SENSORS</a>
       <br><a href="/firmware">FIRMWARE</a>
       <h1>SENSORS</h1>
       <br>
