--- a/firmware/data/firmware.html
+++ b/firmware/data/firmware.html
@@ -9,7 +9,7 @@
     <div>
     <form action="/firmware" method="POST">
       <a href="/">HOME</a> | <a href="/wifi">WIFI</a> | <a href="/config">CONFIG HA</a> | <a href="/sensors">SENSORS</a>
-      <br><a href="/firmware">FIRMWARE</a>
+      <br><a href="/settings">SETTINGS</a> | <a href="/firmware">FIRMWARE</a>
       <h1>FIRMWARE</h1>
       <br>
       <br><b>Server Version:</b>
