--- a/firmware/data/sensors.html
+++ b/firmware/data/sensors.html
@@ -9,7 +9,7 @@
     <div>
     <form action="/sensors" method="POST">
       <a href="/">HOME</a> | <a href="/wifi">WIFI</a> | <a href="/config">CONFIG HA</a> | <a href="/sensors">SENSORS</a>
-      <br><a href="/firmware">FIRMWARE</a>
+      <br><a href="/settings">SETTINGS</a> | <a href="/firmware">FIRMWARE</a>
       <h1>SENSORS</h1>
       <br>
         <table style="width: 100%%;">
