--- a/firmware/data/index.html
+++ b/firmware/data/index.html
@@ -9,7 +9,7 @@
     <div>
     <form action="/" method="POST">
       <a href="/">HOME</a> | <a href="wifi">WIFI</a> | <a href="/config">CONFIG HA</a> | <a href="/sensors">SENSORS</a>
-      <br><a href="/firmware">FIRMWARE</a>
+      <br><a href="/settings">SETTINGS</a> | <a href="/firmware">FIRMWARE</a>
       <h1>SMART PLANT <br>MONITOR </h1>
       <br>
       <br>
