--- a/firmware/data/settings.html
+++ b/firmware/data/settings.html
@@ -15,14 +15,14 @@
 	  <br>
 	  <br>
       <b>
-        <label for="url">Update Interval (sec):</label>
+        <label for="url">Update Interval: <span id="value"></span> min</label>
         <br>
       </b>
+
+      <input type="range" min="1" max="120" value="%update_interval_default%" class="slider" id="update_interval" name="update_interval" required>
+      <br>
+      <br>
 	  <br>
-      <input type="text" name="update_interval" required>
-      <br>
-      <br>
-	  
       <br>
       
       <br>
@@ -37,5 +37,14 @@
     </form>
 	</div>
     <script type="text/javascript" src="script.js"></script>
+	<script>
+	var slider = document.getElementById("update_interval");
+	var output = document.getElementById("value");
+	output.innerHTML = slider.value;
+
+	slider.oninput = function() {
+	  output.innerHTML = this.value;
+	}
+	</script>
   </body>
 </html>
