--- a/arduino/code/1.3.3/data/config.html
+++ b/arduino/code/1.3.3/data/config.html
@@ -31,7 +31,7 @@
       <br>%connection_status%
       <br>
       <br><br>
-      <input type="submit" value="Submit">
+      <input class="btn" type="submit" value="Submit">
       <br>
     </form>
 	</div>
