--- a/arduino/code/1.3.3/data/firmware.html
+++ b/arduino/code/1.3.3/data/firmware.html
@@ -23,7 +23,7 @@
       <br><b><font color = "red">DO NOT POWER OFF DEVICE
       <br>DURING UPDATE</font></b>
       <br>  
-      <br><br><br><input type="submit" value="%firmware_button%">
+      <br><br><br><input class="btn" type="submit" value="%firmware_button%">
       <br>
     </form>
 	</div>
