--- a/arduino/code/1.3.3/data/index.html
+++ b/arduino/code/1.3.3/data/index.html
@@ -17,7 +17,7 @@
       <br>
       <br>
       <br>
-      <input type="submit" value="%restart_button_value%">
+      <input class="btn" type="submit" value="%restart_button_value%">
       <br>
       <br>
       <br>
