--- a/arduino/code/1.3.3/data/sensors.html
+++ b/arduino/code/1.3.3/data/sensors.html
@@ -56,7 +56,7 @@
         </tr>
         </tbody>
         </table>
-        <input type="submit" value="REFRESH">
+        <input class="btn" type="submit" value="REFRESH">
         <br>
     </form>
 	</div>
