--- a/arduino/code/1.3.3/data/settings.html
+++ b/arduino/code/1.3.3/data/settings.html
@@ -32,7 +32,7 @@
       <br>
       <br>
       <br><br>
-      <input type="submit" value="Submit">
+      <input class="btn" type="submit" value="Submit">
       <br>
     </form>
 	</div>
