--- a/arduino/code/1.3.3/data/wifi.html
+++ b/arduino/code/1.3.3/data/wifi.html
@@ -26,7 +26,7 @@
       <input type="password" name="input_password" required>
       <br>
       <br>
-      <input type="submit" value="Submit">
+      <input class="btn" type="submit" value="Submit">
       <br><br><br>
       <b><font color = "red">%wifi_saved_eeprom%</font></b>
       <br><br>
