Added the option to change the device Friendly Name

--- a/firmware/data/settings.html
+++ b/firmware/data/settings.html
@@ -23,11 +23,11 @@
       <br>
       <br>
 	  <br>
-      <br>
-      
-      <br>
-      
-      <br><br>
+      <b>
+        <label for="friendly_name">Friendly Name:</label>
+        <br>
+      </b>
+      <input type="text" name="friendly_name" value="%friendly_name_default%" required>
       <br>
       <br>
       <br>
